--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       
       <!-- control buttons (start and next)-->
         <div class="controls">
-          <button  id="start-btn" class="start-btn btn hide">Start</button>
+          <button  id="start-btn" class="start-btn btn">Start</button>
           <button  id="next-btn" class="next-btn btn hide ">Next</button>
+        </div>
+
+        <div id = "hintBox">
+          <a href="" id="hint" class="hide"><p>Get A Hint</p></a>
         </div>
       </div>
     </div>
