--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <button  id="next-btn" class="next-btn btn hide ">Next</button>
         </div>
 
-        <div id = "hintBox">
-          <a href="" id="hint" class="hide"><p>Get A Hint</p></a>
+        <div id = "hintBox" class="hide">
         </div>
+
       </div>
     </div>
 
