--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
       
       <!-- control buttons (start and next)-->
         <div class="controls">
-          <button  id="start-btn" class="start-btn btn hide">Start</button>
+          <button  id="start-btn" class="start-btn btn">Start</button>
           <button  id="next-btn" class="next-btn btn hide ">Next</button>
         </div>
       </div>
     </div>
+    <div class="newcontainer">
+      <button id="addquestion">Click to add a new question</button>
+      <button id="deletequestion">Click to delete a question</button>
 
     <script type="module" src="./src/init/index.js"></script>
     
