Added functionality to let the user add a new question

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
         <div id = "hintBox" class="hide">
         </div>
-
+        <div class="newcontainer">
+          <button id="addquestion">Click to add a new question</button>
+          <button id="deletequestion">Click to delete a question</button>
+          
+         </div>
       </div>
     </div>
 
