--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./public/style.css" rel="stylesheet" />
+    <title>JSRangerQuiz</title>
+  </head>
 
-<head>
-  <meta charset="utf8" />
-  <title>JS Ranger Quiz</title>
-  <link href="./public/style.css" rel="stylesheet" />
-</head>
+  <body>
+    <header>
+      <h1>Ranger Quiz</h1>
+    </header>
+    <div id="user-interface" class="centered">
+      <!-- question-container and the control buttons (next and start)-->
+      <div class="container">
+        <div class="counter">
+          <p id="question-correct" class=""></p>
+          <p id="question-number" class=""></p>
+        </div>
 
-<body>
-  <div id="user-interface" class="centered">
-    <!-- question-container and the control buttons (next and start)-->
-    <div class="container">
-      <h1>JavaScript Quiz</h1>
-      <p id="question-number" class="hide"> answered questions </p>
-      <p id="question-correct" class="hide"> correct answers </p>
+        <!-- question-container that is hidden by default -->
+        <div id="question-container" class="hide">
+          <div id="question">Question</div>
+          <div id="answer-buttons" class="btn-grid"></div>
+        </div>
 
-      <!-- question-container that is hidden by default -->
-      <div id="question-container" class=" hide ">
-        <div id="question">Question</div>
-        <div id="answer-buttons" class="btn-grid">
+        <!-- control buttons (start and next)-->
+        <div class="controls">
+          <button id="start-btn" class="start-btn btn">Start</button>
+          <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
       </div>
 
-      <!-- control buttons (start and next)-->
-      <div class="controls">
-        <button id="start-btn" class="start-btn btn">Start</button>
-        <button id="next-btn" class="next-btn btn hide">Next</button>
-      </div>
-
-      <div id="hint-box" class="hide">
-      </div>
+      <div id="hint-box" class="hide"></div>
       <div class="modal-question">
-        <button id="add-question">Click to add a new question</button>
-        <button id="delete-question">Click to delete a question</button>
+        <button id="add-question"></button>
+        <button id="delete-question"></button>
       </div>
     </div>
-  </div>
 
-  <script type="module" src="./src/init/index.js"></script>
-
-</body>
-
+    <script type="module" src="./src/init/index.js"></script>
+  </body>
 </html>
